Output di Terminale salvato
Last login: Sun Mar  6 13:25:23 on console
-bash: user: No such file or directory
-bash: export: `-a': not a valid identifier
-bash: export: `/Users/nicolasolazzo/desktop/sms-frontend/*.html': not a valid identifier
-bash: export: `-a': not a valid identifier
-bash: export: `/Users/nicolasolazzo/desktop/sms-frontend/*.jsx': not a valid identifier
iMac-di-Nicola:~ nicolasolazzo$ ls
AT.postflight.869	bash.profile		niksolaz2.github
Applications		footer.tpl		niksolaz3.github
Desktop			indigo			niksolaz4.github
Documents		jnutrition		niksolaz5.github
Downloads		jnutrition.zip		niksolaz6.github
Dropbox			mochikit		niksolaz7.github
Google Drive		niksolaz.github.io	niksolaz8.github
Library			niksolaz0.github	niksolaz9.github
Movies			niksolaz1.github	npm-debug.log
Music			niksolaz10.github	pgadmin.log
PhpstormProjects	niksolaz11.github	response_body.txt
Pictures		niksolaz12.github	responsivetheme
Public			niksolaz13.github	responsivetheme.zip
VirtualBox VMs		niksolaz14.github	token access tw.rtf
awesome-site		niksolaz15.github	will-jekyll-template
iMac-di-Nicola:~ nicolasolazzo$ cd desktop/electronapp
iMac-di-Nicola:electronapp nicolasolazzo$ ls
LICENSE				index.html
README.md			main.js
calendar.js			node_modules
client_secret.json		package.json
client_secret_backup.json	quickstart.js
iMac-di-Nicola:electronapp nicolasolazzo$ npm install -save smalltalk
smalltalk@1.6.6 node_modules/smalltalk
iMac-di-Nicola:electronapp nicolasolazzo$ node quickstart.js
/Users/nicolasolazzo/Desktop/ElectronApp/quickstart.js:81
  document.write(`Go to this <a href='${authUrl}'>url</a> and copy the code in
                 ^
SyntaxError: Unexpected token ILLEGAL
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ rm ~/.credentials/calendar-nodejs-quickstart
rm: /Users/nicolasolazzo/.credentials/calendar-nodejs-quickstart: No such file or directory
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ rm ~/.credentials/calendar-nodejs-quickstart
rm: /Users/nicolasolazzo/.credentials/calendar-nodejs-quickstart: No such file or directory
iMac-di-Nicola:electronapp nicolasolazzo$ rm -rf ~/.credentials/calendar-nodejs-quickstart
iMac-di-Nicola:electronapp nicolasolazzo$ rm ~/.credentials/calendar-nodejs-quickstart
rm: /Users/nicolasolazzo/.credentials/calendar-nodejs-quickstart: No such file or directory
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ rm -rf ~/.credentials/*
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ rm ~/.credentials/calendar-nodejs-quickstart.json 
iMac-di-Nicola:electronapp nicolasolazzo$ ls
LICENSE				index.html
README.md			main.js
calendar.js			node_modules
client_secret.json		package.json
client_secret_backup.json	quickstart.js
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^[[A^C
iMac-di-Nicola:electronapp nicolasolazzo$ npm start

> ElectronApp@1.0.0 start /Users/nicolasolazzo/Desktop/ElectronApp
> electron .

^C
iMac-di-Nicola:electronapp nicolasolazzo$ 
